objects/Product__x.object
<CustomObject>
    <externalDataSource>Product_Catalog</externalDataSource>
    <externalName>northwind.product</externalName>
    <fields>
        <fullName>Categoryid__c</fullName>
        <externalDeveloperName>categoryid</externalDeveloperName>
        <label>Category</label>
        <length>80</length>
        <referenceTo>Category__x</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Discontinued__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>discontinued</externalDeveloperName>
        <label>Discontinued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <externalDeveloperName>productid</externalDeveloperName>
        <label>Product ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <externalDeveloperName>productname</externalDeveloperName>
        <label>Product Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantityperunit__c</fullName>
        <externalDeveloperName>quantityperunit</externalDeveloperName>
        <label>Quantity Per Unit</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reorderlevel__c</fullName>
        <externalDeveloperName>Reorderlevel</externalDeveloperName>
        <label>Reorder Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplierid__c</fullName>
        <externalDeveloperName>supplierid</externalDeveloperName>
        <label>Supplier</label>
        <length>80</length>
        <referenceTo>Supplier__x</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Unitprice__c</fullName>
        <externalDeveloperName>Unitprice</externalDeveloperName>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unitsinstock__c</fullName>
        <externalDeveloperName>unitsinstock</externalDeveloperName>
        <label>Units In Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unitsonorder__c</fullName>
        <externalDeveloperName>unitsonorder</externalDeveloperName>
        <label>Units On Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product</label>
    <pluralLabel>Products</pluralLabel>
</CustomObject>